Support remote selections
Implements feature request #2

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,8 @@
   height: calc(100vh - 65px);
   font-family: 'Roboto Mono', monospace;
 }
+
+.remoteSelectionDecoration {
+	background: lightsalmon;
+  border-radius: 3px;
+}
